(chores) camel-maven-package-plugin: use more performant methods when possible